syntax = "proto3";

import "tracing/proto/tracing.proto";

option go_package = "sigmaos/hotel/proto";

service Reserve {
  rpc MakeReservation(ReserveRequest) returns (ReserveResult);
  rpc CheckAvailability(ReserveRequest) returns (ReserveResult);
}

message ReserveRequest {
	string          customerName = 1;
	repeated string hotelId = 2;
	string          inDate = 3;
	string          outDate = 4;
	int32           number = 5;
  SpanContextConfig spanContextConfig = 6;
}

message ReserveResult {
  repeated string hotelIds = 1;
}
